# denovogear

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  dng-dnm.cc  dng-sim.cc
src/include/dng/: read_group.h  vcfpileup.h
src/include/dng/hts/: bcf.h
src/include/dng/sim/: models.h  pedigree.h  simulator.h
src/include/dng/simulator/: bam.h  data_factory.h  models.h  ped_member.h  simulator.h
src/include/dng/task/: sim.h  sim.xmh
src/lib/: CMakeLists.txt  call.cc
src/lib/task/: sim.cc
test/: CMakeLists.txt
test/src/include/dng/: test_read_group.cc  test_seq.cc  test_utilities.cc
test/src/include/dng/hts/: test_bcf.cc  test_extra.cc  test_hts.cc
test/src/include/dng/io/: test_ped.cc
test/src/lib/: test_pedigree.cc
